objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Marketing_Partner_Location__c</fullName>
        <description>A list of coverage areas offered within the Sponsor Program that equates to engagement rates and sq. ft. minimums</description>
        <inlineHelpText>Select the national, regional or local Dec 2012-Mar 2013 Sponsor Program Coverage Area</inlineHelpText>
        <label>Marketing Partner Location</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Partner_Topic_Channel__c</fullName>
        <inlineHelpText>Select one or all of the topic channels relative to Marketing Partner exposure program</inlineHelpText>
        <label>Marketing Partner Regional Topic Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Success_Factors__c</fullName>
        <description>Enter up to three (3) Marketing Partner Success Factors</description>
        <inlineHelpText>Enter up to three (3) Marketing Partner Factors for Success</inlineHelpText>
        <label>Marketing Factors for Success</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <inlineHelpText>Select the respective type of Marketing Partner Program type</inlineHelpText>
        <label>Marketing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Promotional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Verification Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly National_Regional_Loca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting Advisor BETA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Meets_Validation_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Services checks box if project is on watch list</inlineHelpText>
        <label>Meets Validation Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Action__c</fullName>
        <label>Migration Action</label>
        <picklist>
            <picklistValues>
                <fullName>New to Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move InDev with Consult and Download to Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move InDev without Consult to Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Owner__c</fullName>
        <formula>text(Account.Origination_Owner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migration Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <description>The Total Monthly Fee billed for the respective Product/Program Type</description>
        <inlineHelpText>Input the Total Monthly Fee billed for the respective Product/Program Type</inlineHelpText>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Validated_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Validated Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_step_Results__c</fullName>
        <label>Next Steps Results</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Lender: General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Lender: Poor Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Lender: Undesirable Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alt Lender: Outside of Lender Parameters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Additional Lender Req Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Borrower Approval for New Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Borrower Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Borrower Project Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Borrower Proof of Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Credit Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Developer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Engineering Walk Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Grant Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Lender Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Loan Documents from Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Rebates/Incentives Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Signed Loan Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chasing Developer for Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Scheduling Onsite w/Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Looking at Lender Alternatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed with Proposal: Add Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed with Proposal: Adjust Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed with Proposal: Alt Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Being Re-scoped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Closing Discussion with FDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Finance Team Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Project Consultation with PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Projects Team Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Strategy Discussion with PD</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Noesis_Borrower_Closing_Call_Date__c</fullName>
        <label>Noesis Borrower Closing Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noesis_Borrower_Discussion_Date__c</fullName>
        <label>Initial 3IA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noesis_Borrower_Financing_Call_Date__c</fullName>
        <label>Noesis Borrower Financing Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noesis_Loan_Doc_Request_Date__c</fullName>
        <label>Lender Loan Doc Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noesis_Score__c</fullName>
        <label>Noesis Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Data_Services_Meters__c</fullName>
        <description>This represents the number of meters the customer wants us to include in their Pro Data service.</description>
        <label>Data Services: # Meters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Closed_Never_in_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Closed Never in Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Enter the agreement order # abbreviating the company name and the agreement number: Example is ABC-01</inlineHelpText>
        <label>Order #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_EBP__c</fullName>
        <label>Original EBP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Originations_Owner_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Originations Owner Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originations_Owner__c</fullName>
        <label>Origination Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Kellie Newsome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon McAulay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dawn Jabour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Dowie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Buy_Down_Fees__c</fullName>
        <label>Other Buy Down Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFA__c</fullName>
        <inlineHelpText>Enter the % amount Noesis will receive from the project/deal size</inlineHelpText>
        <label>PFA %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROJECT_DOWNLOAD_DATE__c</fullName>
        <label>Project Download Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Copy_Field__c</fullName>
        <formula>Parent_Account__r.Name</formula>
        <label>Parent Account Copy Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Affiliation/Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Success_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Success Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Advantage_Payment_Option__c</fullName>
        <label>Payment Advantage Package Option</label>
        <picklist>
            <picklistValues>
                <fullName>Tier I=Promo I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier II=Promo II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Advantage_Type__c</fullName>
        <label>Payment Advantage Type</label>
        <picklist>
            <picklistValues>
                <fullName>0% for 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.9% for 60 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest no Payments for 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0% for 24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.9% for 60 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest no Payments for 9 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Before_Taxes__c</fullName>
        <label>Payment Before Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Project_Fee__c</fullName>
        <inlineHelpText>Enter the $ value cost related to each pro project report fee</inlineHelpText>
        <label>Per Project Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Incentive_Fees__c</fullName>
        <label>Performance Incentive Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Rebate_Fees__c</fullName>
        <label>Performance Rebate Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Rebate_Option__c</fullName>
        <label>Performance Rebate Option</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Pays</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform_Project_Identifier__c</fullName>
        <label>Platform Project Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Finance_Incentives__c</fullName>
        <inlineHelpText>Enter any incentives that the project customer is eligible for</inlineHelpText>
        <label>Post Finance Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Finance_Incentives__c</fullName>
        <label>Pre Finance Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Fund__c</fullName>
        <label>Pre-Fund %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Approval_Probability__c</fullName>
        <label>Pre Screen Approval Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Likely: 90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible: 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely: 20%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Complete_Date__c</fullName>
        <label>Pre Screen Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Request_Date__c</fullName>
        <label>Pre Screen Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Underwriting_Activities__c</fullName>
        <label>Pre Underwriting Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Qualification Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtaining Indicative Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gathering Credit Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Pre-Screening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Strategy_Call_Date_Time__c</fullName>
        <label>Preferred Strategy Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Type__c</fullName>
        <label>Primary Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>MF=Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DI=Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA=Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC=Design Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO=Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT=Utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Type__c</fullName>
        <label>Primary Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small-Medium Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Multiple ECM Investments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Technology_Type__c</fullName>
        <label>Primary Technology Type</label>
        <picklist>
            <picklistValues>
                <fullName>CO=Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR=Deep Retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV=HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI=Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O=Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO=Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Front_Office_M_V_Users__c</fullName>
        <label># Pro Front Office+M&amp;V Users</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_OneTime_Set_Up_Fee__c</fullName>
        <label>Data Services OneTime Set Up Fee</label>
        <picklist>
            <picklistValues>
                <fullName>$2,000-Requred for all ERP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Reporting_Base_Ongoing_Monthly_Fee__c</fullName>
        <inlineHelpText>Enter the $ value for the cost of the ongoing monthly base fee for reporting costs</inlineHelpText>
        <label>Pro Reporting (Base) Ongoing Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pro_Reporting_OneTime_Setup_Fee__c</fullName>
        <inlineHelpText>Enter the $ value for the Reporting Base onetime set up fee</inlineHelpText>
        <label>Pro Reporting (Base) OneTime Setup Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pro_Reporting_Reseller_Branded_Portal__c</fullName>
        <inlineHelpText>Enter to $ value for the Branded Portal  One Time Fee</inlineHelpText>
        <label>Pro Reporting Reseller Branded Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pro_Type__c</fullName>
        <inlineHelpText>Select the applicable Pro Services that apply</inlineHelpText>
        <label>Pro Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Noesis Financing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro (Front Office and M&amp;V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro M&amp;V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Front Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Front Office 90 Day Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Financing Services-Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Financing Services-Advantage PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Reviews_Promotional__c</fullName>
        <inlineHelpText>Enter the number of product review requested by partner under  Promotional Services</inlineHelpText>
        <label># Product Reviews_Promo Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Amount__c</fullName>
        <inlineHelpText>Enter the total project amount including incentives and rebates</inlineHelpText>
        <label>Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Bid_Type__c</fullName>
        <label>Project Bid Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Sourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Bid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_CASH_FLOW__c</fullName>
        <label>Annual Project Cash Flow</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Count2__c</fullName>
        <formula>1</formula>
        <label>Project Count2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Customer_Relationship_Type__c</fullName>
        <label>Project Customer Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Customer__c</fullName>
        <description>Enter the name of the customer that is implementing the retrofit project (the contractors customer).</description>
        <label>Project Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Delayed_Stalled_Reason__c</fullName>
        <label>Project Delayed (Stalled) Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Project Pushed to Next Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Pushed to Next Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Re-org</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Discussion_Date_w_Develop__c</fullName>
        <inlineHelpText>Select the most recent date for which Noesis has engaged with the Developer on the  project</inlineHelpText>
        <label>Project Discussion Date w/Develop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Financials_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Financials Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Financing_0_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the project is a 0% Financing Project</inlineHelpText>
        <label>Project is a 0% Financing Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Funding_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Funding Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_GreenLight_Likelihood__c</fullName>
        <inlineHelpText>Select the likelihood that this project will be green lighted by the borrower or group responsible for green lighting the project if the project is financeable?</inlineHelpText>
        <label>Project GreenLight Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Invoice_Received_Date__c</fullName>
        <label>Project Invoice Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Invoice_Request_Date__c</fullName>
        <inlineHelpText>Please enter the date you have requested the project invoice</inlineHelpText>
        <label>Project Invoice Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Payback_In_Yrs__c</fullName>
        <label>Project Payback (In Yrs)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Prepared_For_Name__c</fullName>
        <label>Project Prepared for Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Prepared_for_Email__c</fullName>
        <label>Project Prepared for Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Prepared_for_Phone__c</fullName>
        <label>Project Prepared for Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project_Prepared_for_Title__c</fullName>
        <label>Project Prepared for Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Property_Financing_Needs__c</fullName>
        <label>Project/Property Financing Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Project Cannot Proceed w/o Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Financing: Shopping Other Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Internal Budget: Looking at Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluating Options</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Quality_Index__c</fullName>
        <description>Select the likelyhood of the project being funded</description>
        <inlineHelpText>1-Very Likely No
2-Possibly No
3-Possibly Yes
4-Very Likely Yes</inlineHelpText>
        <label>Project Quality Index</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Score__c</fullName>
        <label>Project Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Share_Date__c</fullName>
        <label>Project Share Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Size_Tier__c</fullName>
        <label>Project Size Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>